redis-cluster-srv.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: redis-cluster
    namespace: redis-namespace
spec: 
    serviceName: redis-cluster-service
    replicas: 1
    selector:
        matchLabels:
            app: redis-cluster
