loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-service
spec:
  selector:
    app: example
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
