redis-srv.yaml
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#    name: redis-cluster
#spec:
#    type: ClusterIP
#    ports:
#    -   port: 6379
#        targetPort: 6379
#        name: client
#    selector:
#       app: redis-cluster


        
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: redis-master
spec:
  selector:
    matchLabels:
      app: redis
      role: master
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        role: master
        tier: backend
    spec:
      containers:
      - name: master
        image: registry.k8s.io/redis:e2e  # or just image: redis
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata: 
    name: redis-clusterip-srv
spec: 
    type: ClusterIP
    selector: 
        app: redis
    ports: 
    -   name: redis-port
        protocol: TCP
        port: 6379
        targetPort: 6379
