votes-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: votes-depl
spec: 
    replicas: 1
    selector:
        matchLabels:
            app: voteservice
    template:
        metadata:
            labels:
                app: voteservice
        spec:
            containers:
                -   name: voteservice
                    image: sanderwieringa/voteservice:latest
---
apiVersion: v1
kind: Service
metadata: 
    name: votes-clusterip-srv
spec: 
    type: ClusterIP
    selector: 
        app: voteservice
    ports: 
    -   name: voteservice
        protocol: TCP
        port: 80
        targetPort: 80
