ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-srv
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
    rules:
        -   host: acmegag.com
            http:
                paths:
                    -   path: /api/Post
                        pathType: Prefix
                        backend: 
                            service: 
                                name: posts-clusterip-srv
                                port:
                                    number: 80
                    -   path: /api/v/Post
                        pathType: Prefix
                        backend:
                            service:
                                name: votes-clusterip-srv
                                port: 
                                    number: 80
